clusters/pi/certificate.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dummyproject
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
